--- a/src/main/resources/view/viewcustomer_form_controller.fxml
+++ b/src/main/resources/view/viewcustomer_form_controller.fxml
@@ -44,7 +44,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="363.0" layoutY="177.0" prefHeight="25.0" prefWidth="131.0" style="-fx-background-color: #c23616;" text="Delete Customer" textFill="WHITE">
+      <JFXButton layoutX="363.0" layoutY="177.0" onAction="#btnDeleteCustomerOnAction" prefHeight="25.0" prefWidth="131.0" style="-fx-background-color: #c23616;" text="Delete Customer" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
