--- a/src/main/resources/view/dashboard_form_controller.fxml
+++ b/src/main/resources/view/dashboard_form_controller.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.DashboardFormController">
+<AnchorPane prefHeight="200.0" prefWidth="183.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.DashboardFormController">
    <children>
-      <Button layoutX="264.0" layoutY="138.0" mnemonicParsing="false" onAction="#AddCustomerOnAction" text="Add" />
-      <Button layoutX="264.0" layoutY="174.0" mnemonicParsing="false" onAction="#ViewCustomerOnAction" text="View" />
+      <JFXButton layoutX="31.0" layoutY="117.0" prefHeight="25.0" prefWidth="123.0" style="-fx-background-color: #22a6b3;" text="Add Item Form" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="31.0" layoutY="59.0" prefHeight="25.0" prefWidth="123.0" style="-fx-background-color: #130f40;" text="Add Customer Form" textFill="WHITE" />
    </children>
 </AnchorPane>
