--- a/src/main/resources/view/viewcustomer_form_controller.fxml
+++ b/src/main/resources/view/viewcustomer_form_controller.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ViewCustomerFormController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Customer.ViewCustomerFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#072f55" height="59.0" stroke="BLACK" strokeType="INSIDE" width="600.0" />
       <Label layoutX="151.0" layoutY="4.0" prefHeight="49.0" prefWidth="322.0" text="ViewCustomer Form" textFill="WHITE">
